services/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: {}
  template:
    metadata: {}
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
      - name: vaultwarden
        image: docker.io/vaultwarden/server:1.37.3
        ports:
        - name: http
          containerPort: 8088
        - name: websocket
          containerPort: 8089
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: vaultwarden-pv-claim
