services/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
spec:
  ports:
    - protocol: TCP
      port: 8088
      name: http
    - protocol: TCP
      port: 8089
      name: websocket
  clusterIP: None
  type: ClusterIP
