services/vaultwarden/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
spec:
  parentRefs:
    - name: envoy
  hostnames:
    - bitwarden.erebe.eu
  rules:
    - matches:
        - path:
            type: Exact
            value: /notifications/hub
      backendRefs:
        - name: vaultwarden
          port: 8089
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vaultwarden
          port: 8088
